// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ManagementConsoleNav tests Snapshot testing with jobs management props 1`] = `
<ManagementConsoleNav
  pathname="/JobsManagement"
>
  <Nav
    aria-label="Nav"
    onSelect={[Function]}
    onToggle={[Function]}
    ouiaId="navigation-list"
    ouiaSafe={true}
    theme="dark"
  >
    <nav
      aria-label="Nav"
      className="pf-c-nav"
      data-ouia-component-id="navigation-list"
      data-ouia-component-type="PF4/Nav"
      data-ouia-safe={true}
    >
      <NavList
        ariaLeftScroll="Scroll left"
        ariaRightScroll="Scroll right"
      >
        <ul
          className="pf-c-nav__list"
          onScroll={[Function]}
        >
          <NavItem
            isActive={false}
            key="process-instances-nav"
            ouiaId="process-instances"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="process-instances"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="process-instances"
                onClick={[Function]}
                tabIndex={null}
                to="/ProcessInstances"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="process-instances"
                  href="/ProcessInstances"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="process-instances"
                    href="/ProcessInstances"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Process Instances
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={true}
            key="jobs-management-nav"
            ouiaId="jobs-management"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="jobs-management"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current="page"
                className="pf-c-nav__link pf-m-current"
                data-ouia-navigation-name="jobs-management"
                onClick={[Function]}
                tabIndex={null}
                to="/JobsManagement"
              >
                <LinkAnchor
                  aria-current="page"
                  className="pf-c-nav__link pf-m-current"
                  data-ouia-navigation-name="jobs-management"
                  href="/JobsManagement"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current="page"
                    className="pf-c-nav__link pf-m-current"
                    data-ouia-navigation-name="jobs-management"
                    href="/JobsManagement"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Jobs Management
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
        </ul>
      </NavList>
    </nav>
  </Nav>
</ManagementConsoleNav>
`;

exports[`ManagementConsoleNav tests Snapshot testing with process list props 1`] = `
<ManagementConsoleNav
  pathname="/ProcessInstances"
>
  <Nav
    aria-label="Nav"
    onSelect={[Function]}
    onToggle={[Function]}
    ouiaId="navigation-list"
    ouiaSafe={true}
    theme="dark"
  >
    <nav
      aria-label="Nav"
      className="pf-c-nav"
      data-ouia-component-id="navigation-list"
      data-ouia-component-type="PF4/Nav"
      data-ouia-safe={true}
    >
      <NavList
        ariaLeftScroll="Scroll left"
        ariaRightScroll="Scroll right"
      >
        <ul
          className="pf-c-nav__list"
          onScroll={[Function]}
        >
          <NavItem
            isActive={true}
            key="process-instances-nav"
            ouiaId="process-instances"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="process-instances"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current="page"
                className="pf-c-nav__link pf-m-current"
                data-ouia-navigation-name="process-instances"
                onClick={[Function]}
                tabIndex={null}
                to="/ProcessInstances"
              >
                <LinkAnchor
                  aria-current="page"
                  className="pf-c-nav__link pf-m-current"
                  data-ouia-navigation-name="process-instances"
                  href="/ProcessInstances"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current="page"
                    className="pf-c-nav__link pf-m-current"
                    data-ouia-navigation-name="process-instances"
                    href="/ProcessInstances"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Process Instances
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
          <NavItem
            isActive={false}
            key="jobs-management-nav"
            ouiaId="jobs-management"
          >
            <li
              className="pf-c-nav__item"
              data-ouia-component-id="jobs-management"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe={true}
              onMouseOver={[Function]}
            >
              <Link
                aria-current={null}
                className="pf-c-nav__link"
                data-ouia-navigation-name="jobs-management"
                onClick={[Function]}
                tabIndex={null}
                to="/JobsManagement"
              >
                <LinkAnchor
                  aria-current={null}
                  className="pf-c-nav__link"
                  data-ouia-navigation-name="jobs-management"
                  href="/JobsManagement"
                  navigate={[Function]}
                  onClick={[Function]}
                  tabIndex={null}
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    data-ouia-navigation-name="jobs-management"
                    href="/JobsManagement"
                    onClick={[Function]}
                    tabIndex={null}
                  >
                    Jobs Management
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </NavItem>
        </ul>
      </NavList>
    </nav>
  </Nav>
</ManagementConsoleNav>
`;
